--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Sentry": {
+    "Dsn": "<SENTRY_DSN>",
+    "SendDefaultPii": true,
+    "MaxRequestBodySize": "Always",
+    "MinimumBreadcrumbLevel": "Debug",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": true,
+    "DiagnosticLevel": "Error",
+    "TracesSampleRate": 1.0
   }
 }
