--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,5 +27,34 @@ jobs:
       run: dotnet build --no-restore
       working-directory: ./src
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory coverage
       working-directory: ./src
+    - name: Generate report
+      run: | 
+          dotnet tool install -g dotnet-reportgenerator-globaltool         
+          reportgenerator -reports:coverage/*/coverage.cobertura.xml -targetdir:"CodeCoverage" -reporttypes:MarkdownSummaryGithub
+      working-directory: ./src
+
+    - name: Write to Job Summary
+      run: cat CodeCoverage/SummaryGithub.md >> $GITHUB_STEP_SUMMARY
+      working-directory: ./src
+
+    - name: Code Coverage Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: src/coverage/*/coverage.cobertura.xml
+        badge: true
+        fail_below_min: true
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: both
+        thresholds: '40 80'
+    
+    - name: Add Coverage PR Comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      if: github.event_name == 'pull_request'
+      with:
+        recreate: true
+        path: code-coverage-results.md
